Welcome to first stable release of MOP!

Here's what's new compared to the last Beta:

Added:
- Added "Go to MOP wiki"
- Added a dialog window when opening an external link
- SATSUMA: Toggle Physics Only is now displayed in mod report
- Temporarily Disable Physics Toggling is now displayed in mod report

Changes:
- Changed the layout of mod report
- Minor changes related to occlusion culling