@@ -1,4 +1,4 @@
-Welcome to first stable release of MOP!
+Welcome to Release Candidate 1!
 
 Here's what's new compared to the last Beta:
 
@@ -7,7 +7,11 @@ Added:
 - Added a dialog window when opening an external link
 - SATSUMA: Toggle Physics Only is now displayed in mod report
 - Temporarily Disable Physics Toggling is now displayed in mod report
+- Added "Advanced" settings
+- Added support for Moonshine Still mod (thanks to Hawk031)
 
 Changes:
 - Changed the layout of mod report
 - Minor changes related to occlusion culling
+- Moved vehicles and shop items toggling to Advanced settings
+- Compatibility Manager rewrite
